# tycoon-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  jira-sync.yml  nightly-e2e.yml  publish.yml
data/: README.md
dbt_project/: README.md  dbt_project.yml  packages.yml  profiles.yml
docs/: index.md  ingestion-architecture.md  install_rill.sh  openmetadata.md  publishing-to-pypi.md
docs/commands/: docs.md  doctor.md  index.md  init.md  notify.md  profiles.md  register.md  run.md  schedule.md  semantics.md  setup.md  start.md
docs/commands/ask/: index.md
docs/commands/data/: analyze.md  history.md  query.md  run-all.md  sources.md  status.md  sync.md  transform.md
docs/getting-started/: concepts.md  first-project.md  installation.md
docs/proposals/: ducklake-layered-storage.md  v0.1.10-scope.md  v0.1.6-and-v0.1.7-open-questions.md  v0.1.8-scope.md  v0.1.9-scope.md
docs/proposals/_tycoon/: ARCHITECTURE.md  MANIFESTO.md  PLAN.md  README.md
docs/recipes/: csv-to-dashboard.md  existing-dbt-profile.md  existing-dbt-project.md  fivetran-metadata.md  layered-architecture.md  lm-studio-local-llm.md  motherduck-cloud-sync.md  osi-export.md
docs/reference/: all-commands.md  dependencies.md  environment.md  observability.md  templates.md  tycoon-yml.md
docs/releases/: v0.1.1.md  v0.1.10.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
rill/: README.md  rill.yaml
src/tycoon/: __init__.py  __main__.py  cli.py  config.py  constants.py  dbt.py  dbt_profiles.py  layers.py  nao.py  notify.py  observability.py  project.py  quack.py  schedule.py  sync.py  venv.py
src/tycoon/commands/: ask.py  data.py  db.py  docs.py  doctor.py  explore.py  fivetran.py  history.py  init.py  notify.py  observability.py  profiles.py  register.py  run.py  run_all.py  schedule.py  semantics.py  setup.py  sources.py  start.py  status.py  stop.py  sync_cmd.py  transform.py
src/tycoon/core/: events.py  history.py  metadata.py
src/tycoon/ingestion/: catalog.py  ducklake_config.py  fivetran_client.py  fivetran_sync.py  mta_bus_speeds_pipeline.py  mta_pipeline.py  nyc_dot_pipeline.py  runner.py  source_installer.py  source_manager.py
src/tycoon/ingestion/sources/: __init__.py
src/tycoon/metadata_backends/: duckdb_file.py
src/tycoon/orchestration/: __init__.py  definitions.py  resources.py
src/tycoon/orchestration/assets/: __init__.py  ingestion.py  rill.py  transforms.py
src/tycoon/scaffolding/: dbt_generator.py  observability_dbt.py  osi_generator.py  rill_generator.py  templates.py
src/tycoon/server/: app.py  routes.py  spa.py  subprocess_manager.py  websocket.py
src/tycoon/services/: definitions.py  manager.py
src/tycoon/templates/csv-import/: README  tycoon.yml
src/tycoon/templates/csv-import/data/input/: widgets.csv
src/tycoon/templates/csv-import/dbt_project/: dbt_project.yml  profiles.yml
src/tycoon/templates/csv-import/dbt_project/models/marts/: fct_widget_summary.sql  schema.yml
src/tycoon/templates/csv-import/dbt_project/models/staging/: schema.yml  stg_widgets.sql
src/tycoon/templates/github-analytics/: template.yml  tycoon.yml
src/tycoon/templates/nyc-transit/: README  tycoon.yml
src/tycoon/templates/weather-station/: template.yml  tycoon.yml
src/tycoon/utils/: console.py  duckdb_utils.py  process.py
tests/: README.md  conftest.py  test_ask_context.py  test_check.py  test_cli.py  test_cli_surface.py  test_config.py  test_constants.py  test_db_command.py  test_dbt_profiles.py  test_e2e_demo_arc.py  test_events.py  test_explore.py  test_fivetran.py  test_history.py  test_ingestion.py  test_init.py  test_layers.py  test_metadata_contract.py  test_nao.py  test_notify.py  test_observability_manifest.py  test_observability_scaffold.py  test_observability_trace.py  test_orchestration.py  test_osi_generator.py  test_project.py  test_project_validation.py  test_quack.py  test_recipe_doctests.py  test_register.py  test_schedule.py  test_server.py  test_services.py  test_setup.py  test_snapshots.py  test_sources.py  test_sync.py  test_templates_e2e.py  test_templates_smoke.py  (+2 more)
tests/__snapshots__/: test_snapshots.ambr
