[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "database-tycoon"
version = "0.1.6"
description = "Database Tycoon — local-first analytics CLI that adapts to your existing data stack"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Database Tycoon Team"}]
requires-python = ">=3.12"
keywords = ["data", "analytics", "duckdb", "dbt", "dlt", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "typer==0.25.0",
    "rich==15.0.0",
    "dbt-core==1.11.8",
    "dbt-duckdb==1.10.1",
    "dlt[duckdb]==1.26.0",
    "duckdb==1.5.2",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "pydantic==2.13.3",
]

[project.optional-dependencies]
server = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
]
dagster = [
    "dagster==1.13.2",
    "dagster-webserver==1.13.2",
    "dagster-dbt==0.29.2",
    "dagster-dlt==0.29.2",
]
ask = [
    "nao-core==0.1.11",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
]

[project.urls]
Homepage = "https://github.com/Database-Tycoon/tycoon-cli"
Repository = "https://github.com/Database-Tycoon/tycoon-cli"
Issues = "https://github.com/Database-Tycoon/tycoon-cli/issues"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
tycoon = "tycoon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tycoon"]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require network or external services (opt-in: `pytest -m e2e`). Skipped by default.",
    "offline_e2e: full-pipeline tests that run entirely offline (init + ingest + transform). Included in the default run so CI gates on real integration, not just unit tests.",
    "recipe: marker for recipe doctest blocks parsed from README / docs/recipes (`tests/test_recipe_doctests.py`). `mode=offline` blocks run by default; `mode=online` blocks gate on `--run-online`.",
    "subprocess_e2e: subprocess-driven end-to-end tests that shell out to the installed `tycoon` binary (catches PATH / Rich rendering / packaging bugs that in-process tests can't see). Included in the default run.",
]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# cli.py intentionally registers subcommands after the Typer app is
# constructed, which ruff flags as E402. The alternative is circular imports.
"src/tycoon/cli.py" = ["E402"]
# Forward-reference string literals in type annotations trip F821 when the
# referenced name is imported inside the method body to avoid circular imports.
"tests/test_ingestion.py" = ["F821"]

[tool.coverage.run]
source = ["src/tycoon"]
branch = false

[tool.coverage.report]
# Baseline at v0.1.2 is ~65% (after server route tests and Dagster
# asset-definition smoke tests landed). The remaining untested code is
# concentrated in the websocket streaming path, the services.manager
# subprocess orchestrator, and a handful of dead/untested orchestration
# assets that require a full Dagster + dbt stack to exercise. Floor is
# set at 60 to give routine drift meaningful headroom over the baseline;
# raise it 1-2 points per release alongside real test additions.
fail_under = 60
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
